Updated Portfolio API, Project CRUD done and both projects are connected to API Gateway

--- a/src/Admin/News/News.API/News.API.csproj
+++ b/src/Admin/News/News.API/News.API.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\News.Application\News.Application.csproj" />
     <ProjectReference Include="..\News.Infrastructure\News.Infrastructure.csproj" />
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
