--- a/src/Admin/AboutPage/AboutPageRequests.API/appsettings.json
+++ b/src/Admin/AboutPage/AboutPageRequests.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AboutPageUserRequestsFINIKDB": "Host=localhost;Port=5432;Username=postgres;Password=psqlDB;Database=MicroserviceAboutPageRequestsFINIKDB"
+  }
 }
