--- a/src/Admin/ContactPage/ContactPageRequests.API/appsettings.json
+++ b/src/Admin/ContactPage/ContactPageRequests.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ContactPageConnectionString": "Host=localhost;Port=5432;Username=postgres;Password=psqlDB;Database=MicroserviceContactPageFINIKDB"
+  }
 }
